--- a/HTML5App1/css/reader.css
+++ b/HTML5App1/css/reader.css
@@ -90,12 +90,13 @@ body {
 }
 
 .newsSnippet {
-	border-bottom: 1px dotted #CCCCCC;
+	border-bottom: 1px solid #CCCCCC;
 	float: left;
+	width:94%;
  	margin-bottom: 5px;
 	margin-left: 5px;
 	overflow: hidden;
-	padding: 5px;
+	padding: 2px 2%;
 }
  
 
@@ -274,17 +275,17 @@ a{
 
 .source-item-list{
 	border: 1px solid #ccc;
+	border-top: none;
 	background: #eee ;
-	font-weight: bold;
 	color: #222;
-	text-shadow: 0  1px  0  #fff ;
-	background-image: linear-gradient( #fff, #f1f1f1);
+ 	text-shadow: 0  2px  2px  #ddd ;
+	background-image: linear-gradient( #fff, #fefefe);
 }
 
 .header-class{
-	border: 1px solid #456f9a /*{b-bar-border}*/;
-	background: #5e87b0 /*{b-bar-background-color}*/;
-	color: #fff /*{b-bar-color}*/;
+	border: 1px solid #456f9a ;
+	background: #5e87b0 ;
+	color: #fff ;
 	font-weight: bold;
 	text-shadow: 0 1px  0 #3e6790;
 	background-image: linear-gradient( #6facd5, #497bae);
@@ -317,47 +318,31 @@ a{
 	color: #fff;
 	border-radius: 4px 4px 0 0;
 }
-.loading{
-	margin:0 auto;
-	width: 100px;
-	margin-top: 100px;
-}
 
-.loading-top{
-	
-	position: absolute;
-	top:45%;
-	right:0;
-	text-align:center;
-	width:100%;
-}
 
 .home-header{
 	margin-top: 3px;
-	border: 1px solid #044062 /*{b-bup-border}*/;
-	background: #396b9e /*{b-bup-background-color}*/;
-	font-weight: bold;
+ 	background: #5f9cc5 ;
 	padding: 3px 10px;
-	box-shadow: 0px 1px 0 rgba(255,255,255,.3);
+	box-shadow: 0px 0px 1px 0px #fff;
 	display:inline-block;
-	color: #fff /*{b-bup-color}*/;
-	text-shadow: 0 /*{b-bup-shadow-x}*/ 1px /*{b-bup-shadow-y}*/ 0 /*{b-bup-shadow-radius}*/ #194b7e /*{b-bup-shadow-color}*/;
-	background-image: linear-gradient( #5f9cc5 /*{b-bup-background-start}*/, #396b9e /*{b-bup-background-end}*/);
+	color: #fff ;
+	background-image: linear-gradient(#396b9e,  #5f9cc5);
 }
 .add-plus{
 	font-weight: bold;
-	background-color: rgba(0,0,0,.4) /*{global-icon-disc}*/;
+	background-color: rgba(0,0,0,.4) ;
 	background-repeat: no-repeat;
-	box-shadow: 0px 1px 0 rgba(255,255,255,.4) /*{global-icon-shadow}*/;
 	border-radius: 15px;
 	padding: 0 5px;
-	text-shadow: 0 /*{b-bup-shadow-x}*/ 1px /*{b-bup-shadow-y}*/ 0 /*{b-bup-shadow-radius}*/ #194b7e /*{b-bup-shadow-color}*/;
+	margin-top:-2px;
+	margin-right:2px;
+	text-shadow: 0  1px 1px #194b7e;
 }
 
 .add-text{
-
-	font-weight: bold;
-	text-shadow: 0 /*{b-bup-shadow-x}*/ 1px /*{b-bup-shadow-y}*/ 0 /*{b-bup-shadow-radius}*/ #194b7e /*{b-bup-shadow-color}*/;
+	text-shadow: 0  2px 2px #194b7e;
+	font-weight: bold;	
 }
 .main{
 	padding:1px;
