--- a/HTML5App1/css/reader.css
+++ b/HTML5App1/css/reader.css
@@ -236,7 +236,7 @@ a{
 	top:0;
 	left:0;
 	z-index:999;
-	background-color: red;
+	background-color: #eee;
 }
 
 .feedlistitem{
@@ -279,7 +279,7 @@ a{
 
 .header-class h1{
 	min-height: 1.1em;
-	text-align: center;
+	text-align: left;
 	font-size: 16px;
 	display: block;
 	margin: .6em 10% .8em;
@@ -308,21 +308,16 @@ a{
 
 .home-header{
 	margin-top: 3px;
- 	background: #5f9cc5 ;
-	padding: 3px 10px;
-	box-shadow: 0px 0px 1px 0px #fff;
+ 	padding: 3px 10px;
 	display:inline-block;
 	color: #fff ;
-	background-image: linear-gradient(#396b9e,  #5f9cc5);
-}
+ }
 .add-plus{
 	font-weight: bold;
-	background-color: rgba(0,0,0,.4) ;
-	background-repeat: no-repeat;
-	border-radius: 15px;
+ 	border-radius: 15px;
 	padding: 0 5px;
 	margin-top:-2px;
-	margin-right:2px;
+	margin-right: -2px;
 	text-shadow: 0  1px 1px #194b7e;
 }
 
