--- a/HTML5App1/css/reader.css
+++ b/HTML5App1/css/reader.css
@@ -152,7 +152,7 @@ body {
 
 .setting-popup{
 	position: absolute;
-	bottom: 2%;
+	bottom: 0;
 	background-color: #eee;
 	box-shadow:1px -1px 4px 1px #888;
 	color: #000;
@@ -346,7 +346,7 @@ a{
 	position:absolute;
 	top:0;
 	margin: 4px 3%;
-	right:0px;
+	right: -1px;
 }
 .btn-sm{
 	padding: 5px 10px;
