--- a/HTML5App1/MainPage.xaml
+++ b/HTML5App1/MainPage.xaml
@@ -14,16 +14,31 @@
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid  x:Name="LayoutRoot" Background="Transparent">
-         <phone:WebBrowser x:Name="Browser"
+    <Grid x:Name="LayoutRoot" Background="Transparent">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!--TitlePanel contains the name of the application and page title.-->
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock 
+        		x:Name="ApplicationTitle" 
+        		Text="Subscriptions" 
+        		Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0,319,0"/>
+        </StackPanel>
+        <!--ContentPanel - place additional content here.-->
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <phone:WebBrowser  
+                            
+                            x:Name="Browser"
                             HorizontalAlignment="Stretch"
-                           VerticalAlignment="Stretch"
-                           Loaded="Browser_Loaded"
-                           ScriptNotify="notifyHandler"
-                           ManipulationCompleted="Border_ManipulationCompleted"
-                           ManipulationDelta="Border_ManipulationDelta"
-                           NavigationFailed="Browser_NavigationFailed" />
-        
+                            VerticalAlignment="Stretch"
+                            Loaded="Browser_Loaded"
+                            ScriptNotify="notifyHandler"
+                            ManipulationCompleted="Border_ManipulationCompleted"
+                            ManipulationDelta="Border_ManipulationDelta"
+                            NavigationFailed="Browser_NavigationFailed" />
+        </Grid>
     </Grid>
-    
 </phone:PhoneApplicationPage>
